--- a/12/12.tex
+++ b/12/12.tex
@@ -184,6 +184,7 @@
 		\frac{\partial \varphi}{\partial y} = \alpha_3 + \alpha_4 x
 	\]
 
+	\newpage
 	\begin{center}
 		\textbf{Естественная криволинейная система координат}
 	\end{center}
