lab5 pre-released

--- a/ЛР5/tex/lb5.tex
+++ b/ЛР5/tex/lb5.tex
@@ -194,4 +194,148 @@ p_x^{(e)} \\ 0
 	\includegraphics[width=0.5\linewidth]{treygolnichki.png}
 \end{figure} 
 
+\newpage
+
+Код для вычисления перемещений:
+\begin{lstlisting}[language=Python]
+	import math
+	import numpy as np
+	import pandas as pd
+	
+	px = 8 * 10**5
+	t = 2
+	E = 2 * 10**7
+	mu = 0.25
+	S = 2
+	
+	node_koord = [[0,0], [0,1], [0,2], [4,0], [4,1], 
+		[4,2], [8,0], [8,1], [8,2]]
+	node_bound = [[6,7], [7,8]]
+	node_trial = [[0,1,4], [0,3,4], [1,2,5], [1,4,5], 
+		[3,4,7], [3,6,7], [4,5,8], [4,7,8]]
+	
+	F = np.zeros(18)
+	for pair in node_bound:
+		i,j = pair
+		l_ij = 1
+		F[2*i] += t * l_ij * px / 2
+		F[2*j] += t * l_ij * px / 2
+	F = F/100000
+	
+	K = np.zeros((18, 18))
+	for trial in node_trial:
+		i,j,k = trial
+		xi,yi = node_koord[i]
+		xj,yj = node_koord[j]
+		xk,yk = node_koord[k]
+	
+		ai = xj*yk - xk*yj
+		aj = xk*yi - xi*yk
+		ak = xi*yj - xj*yi
+		bi = yj - yk
+		bj = yk - yi
+		bk = yi - yj
+		ci = xk - xj
+		cj = xi - xk
+		ck = xj - xi
+	
+		B = np.array([
+			[bi/(2*S), 0, bj/(2*S), 0, bk/(2*S), 0],
+			[0, ci/(2*S), 0, cj/(2*S), 0, ck/(2*S)],
+			[ci/(2*S), bi/(2*S), cj/(2*S), 
+				bj/(2*S), ck/(2*S), bk/(2*S)]
+		])
+	
+		kof = E / (1 - mu**2)
+		D = np.array([
+			[kof, kof*mu, 0],
+			[kof*mu, kof, 0],
+			[0, 0, kof*(1-mu)/2]
+		])
+	
+		Ke = t * S * (B.T @ D @ B)
+		indices = [2*i, 2*i+1, 2*j, 2*j+1, 2*k, 2*k+1]
+
+		for m in range(6):
+			for n in range(6):
+				K[indices[m], indices[n]] += Ke[m, n]
+	
+	K = K/100000
+\end{lstlisting}
+
+Вектор правых частей:
+\[
+F = 
+\begin{bmatrix}
+0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\
+0 \\ 0 \\ 0 \\ 8 \\ 0 \\ 16 \\ 0 \\ 8 \\ 0
+\end{bmatrix}
+\]
+
+Полученная матрица \(K\):
+\newpage
+\begin{landscape}
+\[
+K = 
+\begin{bmatrix}
+373.33 & 0 & -320 & 80 & 0 & 0 & -53.33 & 53.33 & 0 & -133.33 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+0 & 873.33 & 53.33 & -853.33 & 0 & 0 & 80 & -20 & -133.33 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+-320 & 53.33 & 746.67 & -133.33 & -320 & 80 & 0 & 0 & -106.67 & 133.33 & 0 & -133.33 & 0 & 0 & 0 & 0 & 0 & 0 \\
+80 & -853.33 & -133.33 & 1746.67 & 53.33 & -853.33 & 0 & 0 & 133.33 & -40 & -133.33 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+0 & 0 & -320 & 53.33 & 373.33 & -133.33 & 0 & 0 & 0 & 0 & -53.33 & 80 & 0 & 0 & 0 & 0 & 0 & 0 \\
+0 & 0 & 80 & -853.33 & -133.33 & 873.33 & 0 & 0 & 0 & 0 & 53.33 & -20 & 0 & 0 & 0 & 0 & 0 & 0 \\
+-53.33 & 80 & 0 & 0 & 0 & 0 & 746.67 & -133.33 & -640 & 133.33 & 0 & 0 & -53.33 & 53.33 & 0 & -133.33 & 0 & 0 \\
+53.33 & -20 & 0 & 0 & 0 & 0 & -133.33 & 1746.67 & 133.33 & -1706.67 & 0 & 0 & 80 & -20 & -133.33 & 0 & 0 & 0 \\
+\vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \vdots \\
+0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & -133.33 & 0 & 80 & -20 & 0 & 0 & 53.33 & -853.33 & 0 & 873.33
+\end{bmatrix}
+\]
+\end{landscape}
+
+\newpage
+Редуцируем матрицу, так как нам известны значения для первых трех узлов:
+\begin{lstlisting}[language=Python]
+	known_indices = [0, 1, 2, 3, 4, 5]   
+	known_values = [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]  
+	K_reduced = np.delete(K, known_indices, axis=0)  
+	K_reduced = np.delete(K_reduced, known_indices, axis=1)  
+	F_reduced = np.delete(F, known_indices, axis=0)
+\end{lstlisting}
+
+Вектор правых частей:
+\[
+F = 
+\begin{bmatrix}
+0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\ 0 \\
+0 \\ 0 \\ 0 \\ 8 \\ 0 \\ 16 \\ 0 \\ 8 \\ 0
+\end{bmatrix}
+\]
+
+Полученная матрица \(K\):
+\newpage
+\begin{landscape}
+\[
+K = 
+\begin{bmatrix}
+746.67 & -133.33 & -640 & 133.33 & 0 & 0 & -53.33 & 53.33 & 0 & -133.33 & 0 & 0 \\
+-133.33 & 1746.67 & 133.33 & -1706.67 & 0 & 0 & 80 & -20 & -133.33 & 0 & 0 & 0 \\
+-640 & 133.33 & 1493.33 & -266.67 & -640 & 133.33 & 0 & 0 & -106.67 & 133.33 & 0 & -133.33 \\
+133.33 & -1706.67 & -266.67 & 3493.33 & 133.33 & -1706.67 & 0 & 0 & 133.33 & -40 & -133.33 & 0 \\
+0 & 0 & -640 & 133.33 & 746.67 & -133.33 & 0 & 0 & 0 & 0 & -53.33 & 80 \\
+0 & 0 & 133.33 & -1706.67 & -133.33 & 1746.67 & 0 & 0 & 0 & 0 & 53.33 & -20 \\
+-53.33 & 80 & 0 & 0 & 0 & 0 & 373.33 & -133.33 & -320 & 53.33 & 0 & 0 \\
+53.33 & -20 & 0 & 0 & 0 & 0 & -133.33 & 873.33 & 80 & -853.33 & 0 & 0 \\
+0 & -133.33 & -106.67 & 133.33 & 0 & 0 & -320 & 80 & 746.67 & -133.33 & -320 & 53.33 \\
+-133.33 & 0 & 133.33 & -40 & 0 & 0 & 53.33 & -853.33 & -133.33 & 1746.67 & 80 & -853.33 \\
+0 & 0 & 0 & -133.33 & -53.33 & 53.33 & 0 & 0 & -320 & 80 & 373.33 & 0 \\
+0 & 0 & -133.33 & 0 & 80 & -20 & 0 & 0 & 53.33 & -853.33 & 0 & 873.33
+\end{bmatrix}
+\]
+\end{landscape}
+
+Решая СЛАУ KX=F для редуцированных K и F, получаем вектор перемещений:
+
+\[ [0.,   0. ,   0.,    0.  ,  0. ,   0. ,   0.16,  0.02,  0.15 , 0.01 , 0.15, 0., 0.32,  0.03,  0.31,  0.02,  0.31,  0.01] \]
+
+
 \end{document}
